doc/changes/package_diffs/2.2.0/standard-EXASOL-7.1.0/flavor_base_deps/python3_pip_packages_diff.md
<!-- markdown-link-check-disable -->

|    | Package                                                                                                                       | Version in 2.1.0     | Version in 2.2.0     | Status   |
|---:|:------------------------------------------------------------------------------------------------------------------------------|:---------------------|:---------------------|:---------|
|  0 | azure-batch                                                                                                                   | 10.0.0               | 10.0.0               |          |
|  1 | google-cloud-ndb                                                                                                              | 1.9.0                | 1.9.0                |          |
|  2 | google-cloud-bigtable                                                                                                         | 2.2.0                | 2.2.0                |          |
|  3 | google-cloud-containeranalysis                                                                                                | 2.3.0                | 2.3.0                |          |
|  4 | google-cloud-datacatalog                                                                                                      | 3.2.1                | 3.2.1                |          |
|  5 | google-cloud-datastore                                                                                                        | 2.1.3                | 2.1.3                |          |
|  6 | google-cloud-firestore                                                                                                        | 2.1.3                | 2.1.3                |          |
|  7 | google-cloud-kms                                                                                                              | 2.3.0                | 2.3.0                |          |
|  8 | google-cloud-logging                                                                                                          | 2.5.0                | 2.5.0                |          |
|  9 | google-cloud-monitoring                                                                                                       | 2.2.1                | 2.2.1                |          |
| 10 | google-cloud-pubsub                                                                                                           | 2.5.0                | 2.5.0                |          |
| 11 | azure-cosmos                                                                                                                  | 4.2.0                | 4.2.0                |          |
| 12 | google-cloud-spanner                                                                                                          | 3.5.0                | 3.5.0                |          |
| 13 | google-cloud-storage                                                                                                          | 1.38.0               | 1.38.0               |          |
| 14 | google-cloud-trace                                                                                                            | 1.2.0                | 1.2.0                |          |
| 15 | martian                                                                                                                       | 1.4                  | 1.4                  |          |
| 16 | protobuf                                                                                                                      | 3.17.3               | 3.17.3               |          |
| 17 | pyexasol                                                                                                                      | 0.20.0               | 0.20.0               |          |
| 18 | pykickstart                                                                                                                   | 3.33                 | 3.33                 |          |
| 19 | pysftp                                                                                                                        | 0.2.9                | 0.2.9                |          |
| 20 | google-cloud-bigquery-storage                                                                                                 | 2.4.0                | 2.4.0                |          |
| 21 | google-cloud-bigquery                                                                                                         | 2.20.0               | 2.20.0               |          |
| 22 | google-cloud-asset                                                                                                            | 3.1.0                | 3.1.0                |          |
| 23 | git+http://github.com/EXASOL/websocket-api.git@758d57d6d076c495b449c9017db3083498c44445#egg=exasol-db-api&subdirectory=python | No version specified | No version specified |          |
| 24 | azure-eventgrid                                                                                                               | 4.3.0                | 4.3.0                |          |
| 25 | azure-eventhub                                                                                                                | 5.5.0                | 5.5.0                |          |
| 26 | azure-eventhub-checkpointstoreblob                                                                                            | 1.1.4                | 1.1.4                |          |
| 27 | azure-eventhub-checkpointstoreblob-aio                                                                                        | 1.1.4                | 1.1.4                |          |
| 28 | azure-identity                                                                                                                | 1.6.0                | 1.6.0                |          |
| 29 | azure-keyvault                                                                                                                | 4.1.0                | 4.1.0                |          |
| 30 | azure-keyvault-certificates                                                                                                   | 4.2.1                | 4.2.1                |          |
| 31 | azure-keyvault-keys                                                                                                           | 4.3.1                | 4.3.1                |          |
| 32 | azure-keyvault-secrets                                                                                                        | 4.2.0                | 4.2.0                |          |
| 33 | azure-kusto-data                                                                                                              | 2.1.3                | 2.1.3                |          |
| 34 | azure-loganalytics                                                                                                            | 0.1.0                | 0.1.0                |          |
| 35 | azure-servicebus                                                                                                              | 7.3.0                | 7.3.0                |          |
| 36 | azure-storage-blob                                                                                                            | 12.8.1               | 12.8.1               |          |
| 37 | azure-storage-file-datalake                                                                                                   | 12.4.0               | 12.4.0               |          |
| 38 | azure-storage-file-share                                                                                                      | 12.5.0               | 12.5.0               |          |
| 39 | azure-storage-queue                                                                                                           | 12.1.6               | 12.1.6               |          |
| 40 | boto3                                                                                                                         | 1.17.96              | 1.17.96              |          |
| 41 | pytz                                                                                                                          | 2021.1               | 2021.1               |          |