doc/changes/package_diffs/6.0.0/standard-EXASOL-7.1.0/flavor_base_deps/python3_pip_packages_diff.md
<!-- markdown-link-check-disable -->

|    | Package                                                                                                                       | Version in 5.0.0     | Version in 6.0.0     | Status   |
|---:|:------------------------------------------------------------------------------------------------------------------------------|:---------------------|:---------------------|:---------|
|  0 | protobuf                                                                                                                      | 3.17.3               | 3.18.3               | UPDATED  |
|  1 | git+http://github.com/EXASOL/websocket-api.git@758d57d6d076c495b449c9017db3083498c44445#egg=exasol-db-api&subdirectory=python | No version specified |                      | REMOVED  |
|  2 | git+https://github.com/numpy/numpy.git@maintenance/1.19.x                                                                     | No version specified |                      | REMOVED  |
|  3 | Pygments                                                                                                                      |                      | 2.14.0               | NEW      |
|  4 | boto                                                                                                                          |                      | 2.49.0               | NEW      |
|  5 | cffi                                                                                                                          |                      | 1.15.0               | NEW      |
|  6 | cryptography                                                                                                                  |                      | 39.0.1               | NEW      |
|  7 | docutils                                                                                                                      |                      | 0.18.1               | NEW      |
|  8 | git+http://github.com/EXASOL/websocket-api.git#egg=exasol-db-api&subdirectory=python                                          |                      | No version specified | NEW      |
|  9 | jinja2                                                                                                                        |                      | 3.0.3                | NEW      |
| 10 | leveldb                                                                                                                       |                      | 0.201                | NEW      |
| 11 | lxml                                                                                                                          |                      | 4.9.1                | NEW      |
| 12 | numpy                                                                                                                         |                      | 1.21.3               | NEW      |
| 13 | paramiko                                                                                                                      |                      | 2.9.2                | NEW      |
| 14 | pyOpenSSL                                                                                                                     |                      | 23.0.0               | NEW      |
| 15 | pycparser                                                                                                                     |                      | 2.21                 | NEW      |
| 16 | pycurl                                                                                                                        |                      | 7.44.1               | NEW      |
| 17 | pyftpdlib                                                                                                                     |                      | 1.5.6                | NEW      |
| 18 | pyodbc                                                                                                                        |                      | 4.0.32               | NEW      |
| 19 | python-ldap                                                                                                                   |                      | 3.4.0                | NEW      |
| 20 | redis                                                                                                                         |                      | 4.5.3                | NEW      |
| 21 | requests                                                                                                                      |                      | 2.27.1               | NEW      |
| 22 | roman                                                                                                                         |                      | 3.3                  | NEW      |
| 23 | scikit-learn                                                                                                                  |                      | 1.0.2                | NEW      |
| 24 | scipy                                                                                                                         |                      | 1.6.2                | NEW      |
| 25 | setuptools                                                                                                                    |                      | 65.5.1               | NEW      |
| 26 | simplejson                                                                                                                    |                      | 3.17.6               | NEW      |
| 27 | ujson                                                                                                                         |                      | 5.4.0                | NEW      |
| 28 | azure-batch                                                                                                                   | 10.0.0               | 10.0.0               |          |
| 29 | azure-cosmos                                                                                                                  | 4.2.0                | 4.2.0                |          |
| 30 | azure-eventgrid                                                                                                               | 4.3.0                | 4.3.0                |          |
| 31 | azure-eventhub                                                                                                                | 5.5.0                | 5.5.0                |          |
| 32 | azure-eventhub-checkpointstoreblob                                                                                            | 1.1.4                | 1.1.4                |          |
| 33 | azure-eventhub-checkpointstoreblob-aio                                                                                        | 1.1.4                | 1.1.4                |          |
| 34 | azure-identity                                                                                                                | 1.6.0                | 1.6.0                |          |
| 35 | azure-keyvault                                                                                                                | 4.1.0                | 4.1.0                |          |
| 36 | azure-keyvault-certificates                                                                                                   | 4.2.1                | 4.2.1                |          |
| 37 | azure-keyvault-keys                                                                                                           | 4.3.1                | 4.3.1                |          |
| 38 | azure-keyvault-secrets                                                                                                        | 4.2.0                | 4.2.0                |          |
| 39 | azure-kusto-data                                                                                                              | 2.1.3                | 2.1.3                |          |
| 40 | azure-loganalytics                                                                                                            | 0.1.0                | 0.1.0                |          |
| 41 | azure-servicebus                                                                                                              | 7.3.0                | 7.3.0                |          |
| 42 | azure-storage-blob                                                                                                            | 12.8.1               | 12.8.1               |          |
| 43 | azure-storage-file-datalake                                                                                                   | 12.4.0               | 12.4.0               |          |
| 44 | azure-storage-file-share                                                                                                      | 12.5.0               | 12.5.0               |          |
| 45 | azure-storage-queue                                                                                                           | 12.1.6               | 12.1.6               |          |
| 46 | boto3                                                                                                                         | 1.17.96              | 1.17.96              |          |
| 47 | google-cloud-asset                                                                                                            | 3.1.0                | 3.1.0                |          |
| 48 | google-cloud-bigquery                                                                                                         | 2.20.0               | 2.20.0               |          |
| 49 | google-cloud-bigquery-storage                                                                                                 | 2.4.0                | 2.4.0                |          |
| 50 | google-cloud-bigtable                                                                                                         | 2.2.0                | 2.2.0                |          |
| 51 | google-cloud-containeranalysis                                                                                                | 2.3.0                | 2.3.0                |          |
| 52 | google-cloud-datacatalog                                                                                                      | 3.2.1                | 3.2.1                |          |
| 53 | google-cloud-datastore                                                                                                        | 2.1.3                | 2.1.3                |          |
| 54 | google-cloud-firestore                                                                                                        | 2.1.3                | 2.1.3                |          |
| 55 | google-cloud-kms                                                                                                              | 2.3.0                | 2.3.0                |          |
| 56 | google-cloud-logging                                                                                                          | 2.5.0                | 2.5.0                |          |
| 57 | google-cloud-monitoring                                                                                                       | 2.2.1                | 2.2.1                |          |
| 58 | google-cloud-ndb                                                                                                              | 1.9.0                | 1.9.0                |          |
| 59 | google-cloud-pubsub                                                                                                           | 2.5.0                | 2.5.0                |          |
| 60 | google-cloud-spanner                                                                                                          | 3.5.0                | 3.5.0                |          |
| 61 | google-cloud-storage                                                                                                          | 1.38.0               | 1.38.0               |          |
| 62 | google-cloud-trace                                                                                                            | 1.2.0                | 1.2.0                |          |
| 63 | grafeas                                                                                                                       | 1.4.0                | 1.4.0                |          |
| 64 | martian                                                                                                                       | 1.4                  | 1.4                  |          |
| 65 | pyexasol                                                                                                                      | 0.20.0               | 0.20.0               |          |
| 66 | pykickstart                                                                                                                   | 3.33                 | 3.33                 |          |
| 67 | pysftp                                                                                                                        | 0.2.9                | 0.2.9                |          |
| 68 | pytz                                                                                                                          | 2021.1               | 2021.1               |          |
| 69 | sagemaker                                                                                                                     | 2.59.5               | 2.59.5               |          |